# Kratos

applications/MetisApplication/: CMakeLists.txt
applications/TrilinosApplication/: CMakeLists.txt
applications/p4estApplication/: CMakeLists.txt  p4estApplication.json  p4estApplication.py  p4est_application.cpp  p4est_application.h
applications/p4estApplication/custom_modeler/: p4est_connectivity.cpp  p4est_connectivity.h
applications/p4estApplication/custom_python/: add_p4est_to_python.cpp  add_p4est_to_python.h  kratos_p4est_python_application.cpp
cmake_modules/: install_function.cmake
